# portfolio

./: .gitignore  LICENSE.txt  app.py  pyproject.toml
portfolio/: portfolio_stack.py  stage.py
portfolio/apis/: main.py  rest_api.py
portfolio/layer/: main.py
portfolio/shared/: main.py
portfolio/shared/layers/python_sdk/internal/: pyproject.toml
portfolio/user_interface/: main.py
portfolio/user_interface/next-app/: next.config.ts
portfolio/user_interface/next-app/app/: loading.tsx  my-clients.tsx  my-projects.tsx  my-services.tsx  page.tsx  sponsors.tsx
portfolio/user_interface/next-app/app/articles/: page.tsx  recent-article.tsx
portfolio/user_interface/next-app/app/articles/[title]/: page.tsx
portfolio/user_interface/next-app/app/articles/details/: page.tsx
portfolio/user_interface/next-app/app/contact/: page.tsx
portfolio/user_interface/next-app/app/projects/: page.tsx
portfolio/user_interface/next-app/app/projects/[title]/: page.tsx
portfolio/user_interface/next-app/app/projects/details/: page.tsx
portfolio/user_interface/next-app/components/: card.tsx  footer.tsx  get-in-touch.tsx  header.tsx  link.tsx  md-editor-markdown.tsx  overlay.tsx  scroll-animation.tsx  title.tsx
portfolio/user_interface/next-app/lib/: actions.tsx  data.tsx  fetch.tsx  types.ts
portfolio/user_interface/next-app/lib/context/: context.ts
tests/unit/: test_uinlp_website_stack.py
